corrected grid.scss properties / flip cards are aligned correctly now

--- a/css/style.css
+++ b/css/style.css
@@ -251,11 +251,16 @@ body {
     content: "";
     display: table;
     clear: both; }
-  .row .col-1-of-2 {
-    width: calc((100% - 6rem) / 2);
+  .row [class^="col-"] {
     float: left; }
-    .row .col-1-of-2:not(:last-child) {
+    .row [class^="col-"]:not(:last-child) {
       margin-right: 6rem; }
+  .row .col-1-of-2 {
+    width: calc((100% - 6rem) / 2); }
+  .row .col-1-of-3 {
+    width: calc((100% - 2 * 6rem) / 3); }
+  .row .col-1-of-4 {
+    width: calc((100% - 3 * 6rem) / 4); }
 
 .header {
   height: 95vh;
@@ -290,3 +295,7 @@ body {
   margin-top: -8.5rem; }
   .section-features > * {
     transform: skewY(7deg); }
+
+.section-tours {
+  background-color: #f7f7f7;
+  padding: 25rem 0; }
