--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -1,5 +1,6 @@
 .row {
 	max-width: $grid-width;
+	// background-color: red;
 	margin: 0 auto;
 
 	&:not(:last-child) {
@@ -8,13 +9,25 @@
 
 	@include clearfix;
 
-	.col-1-of-2 {
-		width: calc((100% - #{$gutter-horizontal}) / 2);
+	[class^="col-"] {
+		// background-color: red;
 		float: left;
 
 		&:not(:last-child) {
 			margin-right: $gutter-horizontal;
 		}
+	}
+
+	.col-1-of-2 {
+		width: calc((100% - #{$gutter-horizontal}) / 2);
+	}
+
+	.col-1-of-3 {
+		width: calc((100% - 2 * #{$gutter-horizontal}) / 3);
+	}
+
+	.col-1-of-4 {
+		width: calc((100% - 3 * #{$gutter-horizontal}) / 4);
 	}
 
 }
